fix flicker

--- a/administrator/templates/atum/scss/blocks/_sidebar-nav.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar-nav.scss
@@ -1,10 +1,9 @@
 // Sidebar
 
 .sidebar-nav {
-  padding: 1rem 2rem;
+  padding: 1rem 0 1rem 2rem;
 
   li {
-    padding: .25rem;
     font-size: .9rem;
     font-weight: $font-weight-bold;
 
@@ -13,6 +12,7 @@
     }
 
     a {
+      padding: .25rem;
       display: block;
       font-weight: $font-weight-normal;
       color: var(--atum-text-dark);
